--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ node_modules/
 *.egg-info/
 .ipynb_checkpoints
 *.tsbuildinfo
-jupyterlab_google_analytics/labextension
+jupyterlab_check_quota/labextension
+envs/
 
 # Integration tests
 ui-tests/test-results/
