--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "jupyterlab-google-analytics",
-  "version": "0.2.0",
-  "description": "A JupyterLab extension.",
+  "name": "jupyter-anaconda-analytics",
+  "version": "0.1.0",
+  "description": "Anaconda Notebooks analytics widget extension",
   "keywords": [
     "jupyter",
     "jupyterlab",
     "jupyterlab-extension"
   ],
-  "homepage": "https://github.com/team-monolith-product/jupyterlab-google-analytics",
+  "homepage": "https://github.com/anaconda/jupyterlab-anaconda-analytics",
   "bugs": {
-    "url": "https://github.com/team-monolith-product/jupyterlab-google-analytics/issues"
+    "url": "https://github.com/anaconda/jupyterlab-anaconda-analytics/issues"
   },
   "license": "BSD-3-Clause",
   "author": {
-    "name": "ChangHwan Lee",
-    "email": "lch@team-mono.com"
+    "name": "Seba Cherian",
+    "email": "scherian@anaconda.com"
   },
   "files": [
     "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
@@ -26,7 +26,7 @@
   "style": "style/index.css",
   "repository": {
     "type": "git",
-    "url": "https://github.com/team-monolith-product/jupyterlab-google-analytics.git"
+    "url": "https://github.com/anaconda/jupyterlab-anaconda-analytics.git"
   },
   "scripts": {
     "build": "jlpm build:lib && jlpm build:labextension:dev",
@@ -37,7 +37,7 @@
     "clean": "jlpm clean:lib",
     "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
     "clean:lintcache": "rimraf .eslintcache .stylelintcache",
-    "clean:labextension": "rimraf jupyterlab_google_analytics/labextension",
+    "clean:labextension": "rimraf jupyterlab_anaconda_analytics/labextension",
     "clean:all": "jlpm clean:lib && jlpm clean:labextension && jlpm clean:lintcache",
     "eslint": "jlpm eslint:check --fix",
     "eslint:check": "eslint . --cache --ext .ts,.tsx",
@@ -91,7 +91,7 @@
   },
   "jupyterlab": {
     "extension": true,
-    "outputDir": "jupyterlab_google_analytics/labextension",
+    "outputDir": "jupyterlab_anaconda_analytics/labextension",
     "schemaDir": "schema"
   },
   "jupyter-releaser": {
