--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,82 @@
 [build-system]
-requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
-build-backend = "jupyter_packaging.build_api"
+requires = ["hatchling>=1.3.1", "jupyterlab==3.4"]
+build-backend = "hatchling.build"
 
-[tool.jupyter-packaging.options]
-skip-if-exists = ["jupyterlab_google_analytics/labextension/static/style.js"]
-ensured-targets = ["jupyterlab_google_analytics/labextension/static/style.js", "jupyterlab_google_analytics/labextension/package.json"]
+[project]
+name = "jupyterlab_anaconda_analytics"
+version = "0.1.0"
+description = "Anaconda Notebooks analytics widget extension"
+readme = "README.md"
+license = { file = "LICENSE" }
+requires-python = ">=3.7"
+authors = [
+    { name = "Seba Cherian", email = "scherian@anaconda.com" },
+    { name = "Bruno Agatao", email = "bagatao@anaconda.com" },
+]
+keywords = ["Jupyter", "JupyterLab", "JupyterLab3"]
+dependencies = [
+    "jupyter_server>=1.6,<2",
+    "httpx"
+]
 
-[tool.jupyter-packaging.builder]
-factory = "jupyter_packaging.npm_builder"
+[project.optional-dependencies]
+test = [
+    "coverage",
+    "pytest",
+    "pytest-asyncio",
+    "pytest-cov",
+    "pytest-tornasync",
+    "pytest-mock",
+]
 
-[tool.jupyter-packaging.build-args]
+[project.urls]
+Homepage = "https://github.com/anaconda/jupyterlab-anaconda-analytics"
+
+[tool.hatch.build]
+artifacts = ["jupyterlab_anaconda_analytics/labextension"]
+
+[tool.hatch.build.targets.wheel.shared-data]
+"jupyterlab_anaconda_analytics/labextension" = "share/jupyter/labextensions/jupyterlab-anaconda-analytics"
+"install.json" = "share/jupyter/labextensions/jupyterlab-anaconda-analytics/install.json"
+"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
+"jupyter-config/nb-config" = "etc/jupyter/jupyter_notebook_config.d"
+
+[tool.hatch.build.targets.sdist]
+exclude = [".github"]
+
+[tool.hatch.build.hooks.jupyter-builder]
+dependencies = ["hatch-jupyter-builder>=0.5"]
+build-function = "hatch_jupyter_builder.npm_builder"
+ensured-targets = [
+    "jupyterlab_anaconda_analytics/labextension/static/style.js",
+    "jupyterlab_anaconda_analytics/labextension/package.json",
+]
+skip-if-exists = ["jupyterlab_anaconda_analytics/labextension/static/style.js"]
+
+[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
 build_cmd = "build:prod"
 npm = ["jlpm"]
 
-[tool.check-manifest]
-ignore = ["jupyterlab_google_analytics/labextension/**", "yarn.lock", ".*", "package-lock.json"]
+[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
+build_cmd = "install:extension"
+source_dir = "src"
+build_dir = "jupyterlab_anaconda_analytics/labextension"
+
+[tool.tbump]
+field = [
+    { name = "channel", default = "" },
+    { name = "release", default = "" },
+]
+file = [
+    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
+    { src = "jupyterlab_anaconda_analytics/_version.py" },
+    { src = "package.json" },
+]
+
+[tool.tbump.version]
+current = "0.4.0"
+regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"
+
+[tool.tbump.git]
+message_template = "Bump to {new_version}"
+tag_template = "v{new_version}"
