--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jupyter-anaconda-analytics",
+  "name": "jupyterlab-anaconda-analytics",
   "version": "0.1.0",
   "description": "Anaconda Notebooks analytics widget extension",
   "keywords": [
@@ -56,30 +56,38 @@
   },
   "dependencies": {
     "@jupyterlab/application": "^3.1.0",
-    "@jupyterlab/settingregistry": "^3.1.0"
+    "@jupyterlab/apputils": "3.4.7",
+    "@jupyterlab/settingregistry": "^3.1.0",
+    "@lumino/coreutils": "^1.5.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@jupyterlab/builder": "^3.1.0",
-    "@jupyterlab/testutils": "^3.0.0",
-    "@types/jest": "^26.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.0.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.1.1",
-    "rimraf": "^3.0.2",
-    "stylelint": "^14.3.0",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-recommended": "^6.0.0",
-    "stylelint-config-standard": "~24.0.0",
-    "stylelint-prettier": "^2.0.0",
-    "typescript": "~4.1.3",
-    "ts-jest": "^26.0.0"
+    "@babel/core": "7.20.12",
+    "@babel/preset-env": "7.19.0",
+    "@jupyterlab/builder": "3.5.3",
+    "@jupyterlab/testutils": "3.4.7",
+    "@types/jest": "26.0.24",
+    "@types/mocha": "9.1.1",
+    "@types/react": "17.0.49",
+    "@types/react-dom": "17.0.17",
+    "@types/react-sparklines": "1.7.2",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "6.15.0",
+    "eslint-plugin-prettier": "3.4.1",
+    "jest": "26.6.3",
+    "npm-run-all": "4.1.5",
+    "prettier": "2.8.3",
+    "rimraf": "3.0.2",
+    "stylelint": "14.11.0",
+    "stylelint-config-prettier": "9.0.3",
+    "stylelint-config-recommended": "6.0.0",
+    "stylelint-config-standard": "24.0.0",
+    "stylelint-prettier": "2.0.0",
+    "ts-jest": "26.5.6",
+    "typescript": "4.1.6"
   },
   "sideEffects": [
     "style/*.css",
@@ -90,6 +98,16 @@
     "access": "public"
   },
   "jupyterlab": {
+    "discovery": {
+      "server": {
+        "managers": [
+          "pip"
+        ],
+        "base": {
+          "name": "jupyterlab_anaconda_analytics"
+        }
+      }
+    },
     "extension": true,
     "outputDir": "jupyterlab_anaconda_analytics/labextension",
     "schemaDir": "schema"
@@ -97,7 +115,7 @@
   "jupyter-releaser": {
     "hooks": {
       "before-build-npm": [
-        "python -m pip install jupyterlab~=3.1",
+        "python -m pip install jupyterlab==3.4",
         "jlpm"
       ],
       "before-build-python": [
