--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,12 +1,9 @@
 {
-  "extends": [
-    "stylelint-config-recommended",
-    "stylelint-config-standard",
-    "stylelint-prettier/recommended"
-  ],
+  "extends": ["stylelint-config-recommended", "stylelint-config-standard", "stylelint-prettier/recommended"],
   "rules": {
     "property-no-vendor-prefix": null,
     "selector-no-vendor-prefix": null,
-    "value-no-vendor-prefix": null
+    "value-no-vendor-prefix": null,
+    "selector-class-pattern": null
   }
 }
