--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,79 +11,85 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@7884fcad6b5d53d10323aee724dc68d8b9096a2e # tag=v2
 
-    - name: Base Setup
-      uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
+      - name: Base Setup
+        uses: jupyterlab/maintainer-tools/.github/actions/base-setup@5d8587d08e9762a195bb48883aa9686b942a2970 # tag=v1
 
-    - name: Install dependencies
-      run: python -m pip install -U jupyterlab~=3.1 check-manifest
+      - name: Install dependencies
+        run: python -m pip install -U jupyterlab==3.4
 
-    - name: Lint the extension
-      run: |
-        set -eux
-        jlpm
-        jlpm run lint:check
-    
-    - name: Test the extension
-      run: |
-        set -eux
-        jlpm run test
+      - name: Lint the extension
+        run: |
+          set -eux
+          jlpm
+          jlpm run lint:check
 
-    - name: Build the extension
-      run: |
-        set -eux
-        python -m pip install .[test]
+      - name: Test the extension
+        run: |
+          set -eux
+          jlpm run test
 
-        jupyter labextension list
-        jupyter labextension list 2>&1 | grep -ie "jupyterlab-google-analytics.*OK"
-        python -m jupyterlab.browser_check
+      - name: Build the extension
+        run: |
+          set -eux
+          python -m pip install .[test]
 
-    - name: Package the extension
-      run: |
-        set -eux
-        check-manifest -v
+          pytest -vv -r ap --cov jupyterlab_anaconda_analytics
+          jupyter server extension list
+          jupyter server extension list 2>&1 | grep -ie "jupyterlab_anaconda_analytics.*OK"
 
-        pip install build
-        python -m build
-        pip uninstall -y "jupyterlab_google_analytics" jupyterlab
+          jupyter labextension list
+          jupyter labextension list 2>&1 | grep -ie "jupyterlab-anaconda-analytics.*OK"
+          python -m jupyterlab.browser_check
 
-    - name: Upload extension packages
-      uses: actions/upload-artifact@v2
-      with:
-        name: extension-artifacts
-        path: dist/jupyterlab_google_analytics*
-        if-no-files-found: error
+      - name: Package the extension
+        run: |
+          set -eux
+
+          pip install build
+          python -m build
+          pip uninstall -y "jupyterlab_anaconda_analytics" jupyterlab
+
+      - name: Upload extension packages
+        uses: actions/upload-artifact@82c141cc518b40d92cc801eee768e7aafc9c2fa2 # tag=v2
+        with:
+          name: extension-artifacts
+          path: dist/jupyterlab_anaconda_analytics*
+          if-no-files-found: error
 
   test_isolated:
     needs: build
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Install Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.9'
-        architecture: 'x64'
-    - uses: actions/download-artifact@v2
-      with:
-        name: extension-artifacts
-    - name: Install and Test
-      run: |
-        set -eux
-        # Remove NodeJS, twice to take care of system and locally installed node versions.
-        sudo rm -rf $(which node)
-        sudo rm -rf $(which node)
+      - name: Checkout
+        uses: actions/checkout@7884fcad6b5d53d10323aee724dc68d8b9096a2e # tag=v2
+      - name: Install Python
+        uses: actions/setup-python@7f80679172b057fc5e90d70d197929d454754a5a # tag=v2
+        with:
+          python-version: '3.9'
+          architecture: 'x64'
+      - uses: actions/download-artifact@f023be2c48cc18debc3bacd34cb396e0295e2869 # tag=v2
+        with:
+          name: extension-artifacts
+      - name: Install and Test
+        run: |
+          set -eux
+          # Remove NodeJS, twice to take care of system and locally installed node versions.
+          sudo rm -rf $(which node)
+          sudo rm -rf $(which node)
 
-        pip install "jupyterlab~=3.1" jupyterlab_google_analytics*.whl
+          pip install "jupyterlab==3.4" jupyterlab_anaconda_analytics*.whl
 
 
-        jupyter labextension list
-        jupyter labextension list 2>&1 | grep -ie "jupyterlab-google-analytics.*OK"
-        python -m jupyterlab.browser_check --no-chrome-test
+          jupyter server extension list
+          jupyter server extension list 2>&1 | grep -ie "jupyterlab_anaconda_analytics.*OK"
+
+          jupyter labextension list
+          jupyter labextension list 2>&1 | grep -ie "jupyterlab-anaconda-analytics.*OK"
+          python -m jupyterlab.browser_check --no-chrome-test
 
   integration-tests:
     name: Integration tests
@@ -94,49 +100,54 @@ jobs:
       PLAYWRIGHT_BROWSERS_PATH: ${{ github.workspace }}/pw-browsers
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@7884fcad6b5d53d10323aee724dc68d8b9096a2e # tag=v2
 
-    - name: Base Setup
-      uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
+      - name: Base Setup
+        uses: jupyterlab/maintainer-tools/.github/actions/base-setup@5d8587d08e9762a195bb48883aa9686b942a2970 # tag=v1
 
-    - name: Download extension package
-      uses: actions/download-artifact@v2
-      with:
-        name: extension-artifacts
-        
-    - name: Install the extension
-      run: |
-        set -eux
-        python -m pip install "jupyterlab~=3.1" jupyterlab_google_analytics*.whl
+      - name: Setup .npmrc
+        run: |
+          echo "@fortawesome:registry=https://npm.fontawesome.com/" > .npmrc
+          echo "//npm.fontawesome.com/:_authToken=${{secrets.FONTAWESOME_TOKEN}}" >> .npmrc
 
-    - name: Install dependencies
-      working-directory: ui-tests
-      env:
-        PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
-      run: jlpm install
+      - name: Download extension package
+        uses: actions/download-artifact@f023be2c48cc18debc3bacd34cb396e0295e2869 # tag=v2
+        with:
+          name: extension-artifacts
 
-    - name: Set up browser cache
-      uses: actions/cache@v2
-      with:
-        path: |
-          ${{ github.workspace }}/pw-browsers
-        key: ${{ runner.os }}-${{ hashFiles('ui-tests/yarn.lock') }}
+      - name: Install the extension
+        run: |
+          set -eux
+          python -m pip install "jupyterlab==3.4" jupyterlab_anaconda_analytics*.whl
 
-    - name: Install browser
-      run: jlpm playwright install chromium
-      working-directory: ui-tests
+      - name: Install dependencies
+        working-directory: ui-tests
+        env:
+          PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+        run: jlpm install
 
-    - name: Execute integration tests
-      working-directory: ui-tests
-      run: |
-        jlpm playwright test
+      - name: Set up browser cache
+        uses: actions/cache@937d24475381cd9c75ae6db12cb4e79714b926ed # tag=v2
+        with:
+          path: |
+            ${{ github.workspace }}/pw-browsers
+          key: ${{ runner.os }}-${{ hashFiles('ui-tests/yarn.lock') }}
 
-    - name: Upload Playwright Test report
-      if: always()
-      uses: actions/upload-artifact@v2
-      with:
-        name: jupyterlab_google_analytics-playwright-tests
-        path: |
-          ui-tests/test-results
-          ui-tests/playwright-report
+      - name: Install browser
+        run: jlpm playwright install chromium
+        working-directory: ui-tests
+
+      - name: Execute integration tests
+        working-directory: ui-tests
+        run: |
+          jlpm playwright test
+
+      - name: Upload Playwright Test report
+        if: always()
+        uses: actions/upload-artifact@82c141cc518b40d92cc801eee768e7aafc9c2fa2 # tag=v2
+        with:
+          name: jupyterlab_anaconda_analytics-playwright-tests
+          path: |
+            ui-tests/test-results
+            ui-tests/playwright-report
